- add option for HTTP proxy when contacting gretl data server
- fix bugs in drag and drop under Windows
- fix crashing bug when trying to save a data file with over
  (about) 120 variables
- add mechanism to record sample when estimating a model, so
  that subsequent tests on that model can be referred to the same 
  sample
- add "native" printing of window contents under win32 and
  gnome

02/11/2002 version 0.98
- fig bug affecting frequency distributions and the test for
  normality of residuals
- improve functionality relating to saving of data files
- fix some build problems
- add more functionality to boxplots
- several fixes and enhancements to "session" mechanism
- better handling of empty data header info
- substantial code cleanups in the interest of adding API
  documentation
- allow copying LaTeX equation representation of models 
  to clipboard; also improve the typsetting of these
- change default user directory to ~/gretl under unix
- add option to make cwd rather than userdir the default
  for file opening and saving
- Change the default data format to XML (optionally gzipped)
  but retain backward compatibility with old ascii data
  format
- add dependency on libxml (dll suplied for win32)
- switch from ".dat" to ".gdt" as default filename extension
  for gretl datafiles (but add option to GUI to use ".dat")
- changing to storing data header info in buffer rather than using
  repeated file I/O
- add search/replace dialog to window for editing scripts; also
  Edit/Paste menu choice and choice of fixed font
- add drag and drop support for datafiles under win32, 
  register the .gdt suffix for gretl datafiles, and add an icon
  for these files

12/14/2001 version 0.97
- fix breakage of var command in GUI
- add facility to draw boxplots
- add various formats to copy of models to clipboard (HTML,
  RTF, LaTeX)
- enable LaTeX and RTF copying for correlation matrix and
  summary statistics windows